Update project 2 August 2025